syntax = "proto3";

option go_package = "github.com/geoffrey-anto/golang-microservice-apis/randomjoke";

service RandomJokeService {
    rpc GetRandomJoke (RandomJokeRequest) returns (stream RandomJokeResponse);
}

message RandomJokeRequest {
    string category = 1;
    int32 timeout = 2;
}

message RandomJokeResponse {
    string joke = 1;
}